Update kitty conf to use firecode nerd font.

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -6,10 +6,10 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-# font_family      monospace
-# bold_font        auto
-# italic_font      auto
-# bold_italic_font auto
+font_family      FiraCode Nerd Font
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
@@ -136,10 +136,12 @@
 #: Enable alternate zero and oldstyle numerals::
 
 #:     font_features FiraCode-Retina +zero +onum
+font_features FiraCode-Retina +zero +onum
 
 #: Enable only alternate zero in the bold font::
 
 #:     font_features FiraCode-Bold +zero
+font_featres FiraCode Nerd Font
 
 #: Disable the normal ligatures, but keep the calt feature which (in
 #: this font) breaks up monotony::
