--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -6,10 +6,15 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      FiraCode Nerd Font
+font_family      Fira Code
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
+
+font_features FiraCode-Retina +zero +onum
+font_features FiraCode-bold +zero
+
+font_featres FiraCode Nerd Font
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
@@ -2241,3 +2246,11 @@ font_featres FiraCode Nerd Font
 
 #: }}}
 include dracula.conf
+
+map ctrl+j kitten pass_keys.py neighboring_window bottom ctrl+j
+map ctrl+k kitten pass_keys.py neighboring_window top    ctrl+k
+map ctrl+h kitten pass_keys.py neighboring_window left   ctrl+h
+map ctrl+l kitten pass_keys.py neighboring_window right  ctrl+l
+
+allow_remote_control yes
+listen_on unix:/tmp/mykitty
