--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -6,15 +6,10 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      Fira Code
-bold_font        auto
-italic_font      auto
-bold_italic_font auto
-
-font_features FiraCode-Retina +zero +onum
-font_features FiraCode-bold +zero
-
-font_featres FiraCode Nerd Font
+# font_family      monospace
+# bold_font        auto
+# italic_font      auto
+# bold_italic_font auto
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
@@ -141,12 +136,10 @@ font_featres FiraCode Nerd Font
 #: Enable alternate zero and oldstyle numerals::
 
 #:     font_features FiraCode-Retina +zero +onum
-font_features FiraCode-Retina +zero +onum
 
 #: Enable only alternate zero in the bold font::
 
 #:     font_features FiraCode-Bold +zero
-font_featres FiraCode Nerd Font
 
 #: Disable the normal ligatures, but keep the calt feature which (in
 #: this font) breaks up monotony::
@@ -2245,8 +2238,27 @@ font_featres FiraCode Nerd Font
 #: }}}
 
 #: }}}
+
+# Font settings
+font_family      Fira Code
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
+
+font_features FiraCode-Retina +zero +onum
+font_features FiraCode-bold +zero
+font_features FiraCode Nerd Font
+
+# Use stack layout
+enabled_layouts stack
+
+# Dracula theme
 include dracula.conf
 
+# scrollback_pager config
+scrollback_pager nvim --noplugin -c "set signcolumn=no showtabline=0" -c "silent write! /tmp/kitty_scrollback_buffer | te cat /tmp/kitty_scrollback_buffer - "
+
+# vim-navigation
 map ctrl+j kitten pass_keys.py neighboring_window bottom ctrl+j
 map ctrl+k kitten pass_keys.py neighboring_window top    ctrl+k
 map ctrl+h kitten pass_keys.py neighboring_window left   ctrl+h
@@ -2254,3 +2266,5 @@ map ctrl+l kitten pass_keys.py neighboring_window right  ctrl+l
 
 allow_remote_control yes
 listen_on unix:/tmp/mykitty
+
+map kitty_mod+enter new_window_with_cwd
