--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,4 +1,5 @@
 # vim:fileencoding=utf-8:foldmethod=marker
+# vim:ft=kitty
 
 #: Fonts {{{
 
@@ -2240,14 +2241,10 @@
 #: }}}
 
 # Font settings
-font_family      Fira Code
+font_family      FiraCode Nerd Font
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
-
-font_features FiraCode-Retina +zero +onum
-font_features FiraCode-bold +zero
-font_features FiraCode Nerd Font
 
 # Use stack layout
 enabled_layouts stack
