Update lvim and kitty with tokyonight_moon theme.

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2249,8 +2249,8 @@ bold_italic_font auto
 # Use stack layout
 enabled_layouts stack
 
-# Dracula theme
-include dracula.conf
+# tokyonight_moon theme
+include tokyonight_moon.conf
 
 # scrollback_pager config
 scrollback_pager nvim --noplugin -c "set signcolumn=no showtabline=0" -c "silent write! /tmp/kitty_scrollback_buffer | te cat /tmp/kitty_scrollback_buffer - "
