Update lunarvim configs. Remove packer_conpiled.lua.

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -185,6 +185,16 @@
 #: arrive at a pixel value. There must be four values corresponding to
 #: thin, normal, thick, and very thick lines.
 
+# Font settings
+font_family      Fira Code
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
+
+disable_ligatures never
+
+font_features FiraCode-Retina +zero
+
 #: }}}
 
 #: Cursor customization {{{
@@ -2239,12 +2249,6 @@
 #: }}}
 
 #: }}}
-
-# Font settings
-font_family      FiraCode Nerd Font
-bold_font        auto
-italic_font      auto
-bold_italic_font auto
 
 # Use stack layout
 enabled_layouts stack
