--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -195,6 +195,8 @@ disable_ligatures never
 
 font_features FiraCode-Retina +zero
 
+font_size 12.0
+
 #: }}}
 
 #: Cursor customization {{{
@@ -1436,7 +1438,7 @@ font_features FiraCode-Retina +zero
 #: background_opacity. If you want to use both, you are probably
 #: better off just hiding the titlebar with hide_window_decorations.
 
-# macos_option_as_alt no
+macos_option_as_alt no
 
 #: Use the Option key as an Alt key on macOS. With this set to no,
 #: kitty will use the macOS native Option+Key to enter Unicode
