Update local files from Intel mac before updating ARM mac.

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2252,8 +2252,8 @@ macos_option_as_alt no
 
 #: }}}
 
-# Use stack layout
-enabled_layouts stack
+# Use vertical layout
+enabled_layouts vertical
 
 # tokyonight_moon theme
 include tokyonight_moon.conf
