--- a/.config/kitty/tokyonight_moon.conf
+++ b/.config/kitty/tokyonight_moon.conf
@@ -5,25 +5,8 @@
 ## author: Folke Lemaitre
 ## upstream: https://github.com/folke/tokyonight.nvim/raw/main/extras/kitty/tokyonight_moon.conf
 
-
 background #222436
 foreground #c8d3f5
-selection_background #3654a7
-selection_foreground #c8d3f5
-url_color #4fd6be
-cursor #c8d3f5
-cursor_text_color #222436
-
-# Tabs
-active_tab_background #82aaff
-active_tab_foreground #1e2030
-inactive_tab_background #2f334d
-inactive_tab_foreground #545c7e
-#tab_bar_background #1b1d2b
-
-# Windows
-active_border_color #82aaff
-inactive_border_color #2f334d
 
 # normal
 color0 #1b1d2b
@@ -44,6 +27,34 @@ color12 #82aaff
 color13 #c099ff
 color14 #86e1fc
 color15 #c8d3f5
+
+# Cursor
+cursor #c8d3f5
+cursor_text_color #222436
+
+# Selection highlight
+selection_background #3654a7
+selection_foreground none
+
+# The color for highlighting URLs on mouse-over
+url_color #4fd6be
+
+# Window borders
+active_border_color #82aaff
+inactive_border_color #2f334d
+bell_border_color #414868
+
+# Tab bar
+tab_bar_style fade
+tab_fade 1
+active_tab_background #82aaff
+active_tab_foreground #1e2030
+active_tab_font_style bold
+inactive_tab_background #2f334d
+inactive_tab_foreground #545c7e
+inactive_tab_font_style bold
+tab_bar_background #101014
+
 
 # extended colors
 color16 #ff966c
