--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -61,7 +61,6 @@
 #: The syntax is::
 
 #:     symbol_map codepoints Font Family Name
-symbol_map U+f6e2 codepoints Font Awesome 6
 
 # narrow_symbols
 
@@ -187,16 +186,16 @@ symbol_map U+f6e2 codepoints Font Awesome 6
 #: thin, normal, thick, and very thick lines.
 
 # Font settings
-font_family      Fira Code
-bold_font        auto
-italic_font      auto
-bold_italic_font auto
-
-disable_ligatures never
-
-font_features FiraCode-Retina +zero
-
-font_size 12.0
+#font_family      Fira Code
+#bold_font        auto
+#italic_font      auto
+#bold_italic_font auto
+#
+#disable_ligatures never
+#
+#font_features FiraCode-Retina +zero
+#
+#font_size 12.0
 
 #: }}}
 
@@ -2267,6 +2266,20 @@ map ctrl+j kitten pass_keys.py neighboring_window bottom ctrl+j
 map ctrl+k kitten pass_keys.py neighboring_window top    ctrl+k
 map ctrl+h kitten pass_keys.py neighboring_window left   ctrl+h
 map ctrl+l kitten pass_keys.py neighboring_window right  ctrl+l
+
+# font and symbols
+font_family      FiraCode Nerd Font
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
+
+disable_ligatures never
+
+font_features FiraCode-Retina +zero
+
+font_size 12.0
+
+symbol_map U+f6e2 codepoints Font Awesome 6
 
 allow_remote_control yes
 listen_on unix:/tmp/mykitty
