--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2268,18 +2268,16 @@ map ctrl+h kitten pass_keys.py neighboring_window left   ctrl+h
 map ctrl+l kitten pass_keys.py neighboring_window right  ctrl+l
 
 # font and symbols
-font_family      FiraCode Nerd Font
-bold_font        auto
-italic_font      auto
-bold_italic_font auto
+font_family      FiraCode Nerd Font Mono
+bold_font        FiraCode Nerd Font Mono Bold
+italic_font      Hack Nerd Font Mono Italic
+bold_italic_font Hack Nerd Font Mono Bold Italic
 
 disable_ligatures never
 
-font_features FiraCode-Retina +zero
+font_features FiraCodeNFM-Ret +zero
 
 font_size 12.0
-
-symbol_map U+f6e2 codepoints Font Awesome 6
 
 allow_remote_control yes
 listen_on unix:/tmp/mykitty
