Update kitty, neovim and zsh configs. Expanded node memory to hopefully fix coffeesense.

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2256,7 +2256,7 @@ macos_option_as_alt no
 enabled_layouts vertical
 
 # tokyonight_moon theme
-include tokyonight_night.conf
+include ~/.local/share/nvim/lazy/tokyonight-night/extras/kitty/tokyonight_night.conf
 
 # scrollback_pager config
 scrollback_pager nvim --noplugin -c "set signcolumn=no showtabline=0" -c "silent write! /tmp/kitty_scrollback_buffer | te cat /tmp/kitty_scrollback_buffer - "
