Add missing configs.

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2252,14 +2252,11 @@ macos_option_as_alt no
 
 #: }}}
 
-# Use vertical layout
+# Window settings
 enabled_layouts vertical
 
-# tokyonight_moon theme
+# Color scheme settings
 include ~/.local/share/nvim/lazy/tokyonight-night/extras/kitty/tokyonight_night.conf
-
-# scrollback_pager config
-scrollback_pager nvim --noplugin -c "set signcolumn=no showtabline=0" -c "silent write! /tmp/kitty_scrollback_buffer | te cat /tmp/kitty_scrollback_buffer - "
 
 # vim-navigation
 map ctrl+j kitten pass_keys.py neighboring_window bottom ctrl+j
@@ -2278,6 +2275,10 @@ disable_ligatures never
 font_features FiraCodeNFM-Ret +zero
 
 font_size 12.0
+
+# Advanced
+# scrollback_pager config
+scrollback_pager nvim --noplugin -c "set signcolumn=no showtabline=0" -c "silent write! /tmp/kitty_scrollback_buffer | te cat /tmp/kitty_scrollback_buffer - "
 
 allow_remote_control yes
 listen_on unix:/tmp/mykitty
