Update Kitty and nvim to use dracula and tweak nvim config.

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2256,7 +2256,7 @@ macos_option_as_alt no
 enabled_layouts vertical
 
 # Color scheme settings
-include ~/.local/share/nvim/lazy/tokyonight-night/extras/kitty/tokyonight_night.conf
+include dracula.conf
 
 # vim-navigation
 map ctrl+j kitten pass_keys.py neighboring_window bottom ctrl+j
