Update dotfiles before thanksgiving break.

--- a/.config/rubocop/config.yml
+++ b/.config/rubocop/config.yml
@@ -6,4 +6,6 @@ Style/Encoding:
   Enabled: true
 Style/FrozenStringLiteralComment:
   Enabled: false
-require: rubocop-rails
+require:
+  rubocop-performance
+  rubocop-rails
