Fix github copilot setup and switch from dracula to tokyonight colorscheme.

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2255,8 +2255,9 @@ macos_option_as_alt no
 # Window settings
 enabled_layouts vertical
 
-# Color scheme settings
-include dracula.conf
+# Colorscheme settings
+# include dracula.conf
+include tokyonight_moon.conf
 
 # vim-navigation
 map ctrl+j kitten pass_keys.py neighboring_window bottom ctrl+j
