--- a/.config/kitty/nerd-font-symbols.conf
+++ b/.config/kitty/nerd-font-symbols.conf
@@ -49,3 +49,6 @@ symbol_map U+2500-U+259F Symbols Nerd Font # Box Drawing
 # nonicons contains icons in the range: U+F101-U+F27D
 # U+F167 is HTML logo, but YouTube logo in Symbols Nerd Font
 symbol_map U+F102,U+F116-U+F118,U+F12F,U+F13E,U+F1AF,U+F1BF,U+F1CF,U+F1FF,U+F20F,U+F21F-U+F220,U+F22E-U+F22F,U+F23F,U+F24F,U+F25F nonicons
+
+# Operating Systems set
+symbol_map U+F32A, U+E73A, U+F31B, U+0548, U+EBC9, U+F31C, U+E712, U+F17C, U+F033D, U+EBC6, U+F349, U+F31A, U+F316, U+F315, U+F333, U+F334 Symbols Nerd Font
