Change to catppuccin theme, add navbuddy and harpoon to neovim.

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2258,10 +2258,6 @@ shell zsh
 # Window settings
 enabled_layouts vertical
 
-# Colorscheme settings
-# include dracula.conf
-include tokyonight_moon.conf
-
 # vim-navigation
 map ctrl+j kitten pass_keys.py neighboring_window bottom ctrl+j
 map ctrl+k kitten pass_keys.py neighboring_window top    ctrl+k
@@ -2286,3 +2282,8 @@ allow_remote_control yes
 listen_on unix:/tmp/mykitty
 
 map kitty_mod+enter new_window_with_cwd
+
+# BEGIN_KITTY_THEME
+# Catppuccin-Macchiato
+include current-theme.conf
+# END_KITTY_THEME
