--- a/.config/rubocop/config.yml
+++ b/.config/rubocop/config.yml
@@ -2,6 +2,9 @@ inherit_from:
   - https://relaxed.ruby.style/rubocop.yml
 AllCops:
   NewCops: enable
+Layout/EmptyLineBetweenDefs:
+  Enabled: true
+  NumberOfEmptyLines: [1, 2]
 Style/Encoding:
   Enabled: true
 Style/FrozenStringLiteralComment:
