--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2265,7 +2265,9 @@ map ctrl+h kitten pass_keys.py neighboring_window left   ctrl+h
 map ctrl+l kitten pass_keys.py neighboring_window right  ctrl+l
 
 # font and symbols
-font_family Iosevka Term
+font_family Fira Code
+# font_family Iosevka Term
+# font_family JetBrains Mono
 
 # Nerd Font symbols
 include nerd-font-symbols.conf
