--- a/.chezmoidata/packages.toml
+++ b/.chezmoidata/packages.toml
@@ -36,6 +36,7 @@
     ]
     formulae = [
       "asdf",            # Package manager that supports multiple runtimes
+      "autoenv",
       "atuin",           # Better shell history
       "bash",
       "bash-completion",
@@ -109,6 +110,7 @@
     formulae = [
       "asdf",            # Package manager that supports multiple runtimes
       "atuin",           # Better shell history
+      "autoenv",
       "bash",
       "bat",             # cat with syntax highlighting and Git integration
       "bottom",          # Process/system monitor for the terminal.
