--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -2265,9 +2265,10 @@ map ctrl+h kitten pass_keys.py neighboring_window left   ctrl+h
 map ctrl+l kitten pass_keys.py neighboring_window right  ctrl+l
 
 # font and symbols
-font_family Fira Code
+# font_family Fira Code
 # font_family Iosevka Term
 # font_family JetBrains Mono
+font_family Geist Mono
 
 # Nerd Font symbols
 include nerd-font-symbols.conf
