Add podman and podman-compose to linuxbrew packages again.

--- a/.chezmoidata/packages.toml
+++ b/.chezmoidata/packages.toml
@@ -20,9 +20,7 @@
       "wget",
     ]
   [packages.apt.dev_computer]
-    packages = [
-      "podman"
-    ]
+    packages = []
   [packages.apt.homelab_member]
     packages = ["iperf"]
   [packages.apt.personal_computer]
@@ -146,6 +144,8 @@
       "ncurses",         # Text-based UI library
       "neovim",
       "openssl",         # SSL/TLS cryptography library
+      "podman",           # open source container tools
+      "podman-compose",
       "postgresql",
       "redis",
       "rip2",            # A safer, rust-based rm
