--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -2267,9 +2267,9 @@ map ctrl+l kitten pass_keys.py neighboring_window right  ctrl+l
 # font and symbols
 # font_family Fira Code
 # font_family Geist Mono
-font_family Iosevka Term
+# font_family Iosevka Term
 # font_family JetBrains Mono
-# font_family Retrocide Mono
+font_family Retrocide Mono
 
 # Nerd Font symbols
 include nerd-font-symbols.conf
