--- a/dot_config/catppuccin/oh-my-posh/catppuccin_macchiato.omp.yaml
+++ b/dot_config/catppuccin/oh-my-posh/catppuccin_macchiato.omp.yaml
@@ -2,14 +2,15 @@
 
 palette:
   blue: "#8AADF4"
-  closer: p:os
+  closer: "#ACB0BE"
   green: "#a6da95"
   lavender: "#B7BDF8"
   mauve: "#c6a0f6"
-  os: "#ACB0BE"
   pink: "#F5BDE6"
   red: "#ed8796"
-  text: "#cad3f5"
+  sapphire: "#7dc4e4"
+  sky: "#91d7e3"
+  text: "#1e2030"
   yellow: "#eed49f"
 blocks:
 - type: prompt
@@ -19,86 +20,117 @@ blocks:
       cache_duration: none
       debian: 
       macos: 
+    background: p:blue
+    foreground: p:text
+    leading_diamond: 
+    powerline_symbol: 
+    style: diamond
     template: "{{.Icon}} "
-    foreground: p:os
     type: os
-    style: plain
   - properties:
       cache_duration: none
+    background: p:blue
+    foreground: p:text
+    powerline_symbol: 
+    style: diamond
     template: " {{ .UserName }}@{{ .HostName }} "
-    foreground: p:blue
     type: session
-    style: plain
   - properties:
       cache_duration: none
       folder_icon: ....
       home_icon: "~"
       style: agnoster_short
-    template: "{{ .Path }} "
-    foreground: p:pink
+    background: p:pink
+    foreground: p:text
+    powerline_symbol: 
+    style: powerline
+    template: " {{ .Path }}"
     type: path
-    style: plain
   - properties:
-      branch_icon: "\ue725 "
+      branch_icon:  
       cache_duration: none
-      cherry_pick_icon: "\ue29b "
-      commit_icon: "\uf417 "
+      cherry_pick_icon:  
+      commit_icon:  
       fetch_status: false
       fetch_upstream_icon: false
-      merge_icon: "\ue727 "
-      no_commits_icon: "\uf0c3 "
-      rebase_icon: "\ue728 "
-      revert_icon: "\uf0e2 "
-      tag_icon: "\uf412 "
-    template: "{{ .HEAD }} "
-    foreground: p:lavender
+      merge_icon:  
+      no_commits_icon: 󰜛 
+      rebase_icon:  
+      revert_icon:  
+      tag_icon:  
+    background: p:lavender
+    foreground: p:text
+    powerline_symbol: 
+    style: powerline
+    template: " {{ .HEAD }}"
     type: git
-    style: plain
-  - properties:
-      cache_duration: none
-    template: 
-    foreground: p:closer
-    type: text
-    style: plain
 - type: prompt
   alignment: right
   overflow: hide
   segments:
   - properties:
       cache_duration: none
-    template: "\ue718  {{ .Full }} "
-    foreground: p:green
-    type: node
-    style: plain
-  - properties:
-      cache_duration: none
-    template:   {{ .Full }}
-    foreground: p:yellow
-    type: python
-    style: plain
-  - properties:
-      cache_duration: none
-    template:   {{ .Full}}
-    foreground: p:red
-    type: ruby
-    style: plain
-  - properties:
-      cache_duration: none
       command: git log --pretty=format:%cr -1 || date +%H:%M:%S
       shell: zsh
-    foreground: p:mauve
+    background: p:sky
+    foreground: p:text
+    leading_diamond: 
     type: command
+    style: diamond
+  - properties:
+      cache_duration: none
+    background: p:mauve
+    foreground: p:text
     style: plain
+    template:  {{ .Full }}
+    type: elixir
+  - properties:
+      cache_duration: none
+    background: p:sapphire
+    foreground: p:text
+    style: plain
+    template:  {{ .Full }}
+    type: go
+  - properties:
+      cache_duration: none
+    background: p:blue
+    foreground: p:text
+    style: plain
+    template: 󰢱 {{ .Full }}
+    type: lua
+  - properties:
+      cache_duration: none
+    background: p:green
+    foreground: p:text
+    style: plain
+    template:  {{ .Full }}
+    type: node
+  - properties:
+      cache_duration: none
+    background: p:yellow
+    foreground: p:text
+    style: plain
+    template:   {{ .Full }}
+    type: python
+  - properties:
+      cache_duration: none
+    background: p:red
+    foreground: p:text
+    style: plain
+    template:   {{ .Full}}
+    type: ruby
   - properties:
       cache_duration: none
       http_timeout: 1000
     cache:
       duration: 5m0s
       strategy: folder
-    template: "{{ .IP }}"
+    background: p:lavender
     foreground: p:text
+    powerline_symbol: 
+    style: diamond
+    template: " {{ .IP }}"
     type: ipify
-    style: plain
 version: 3
 auto_upgrade: true
 final_space: true
