--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -2262,8 +2262,8 @@ map ctrl+h kitten pass_keys.py neighboring_window left   ctrl+h
 map ctrl+l kitten pass_keys.py neighboring_window right  ctrl+l
 
 # font and symbols
-# font_family Fira Code
-font_family Geist Mono
+font_family Fira Code
+# font_family Geist Mono
 # font_family Iosevka Term
 # font_family JetBrains Mono
 # font_family Retrocide Mono
