Update apt packages for podman usage, attempt to fix copy and pasting in toggleterm.

--- a/.chezmoidata/packages.toml
+++ b/.chezmoidata/packages.toml
@@ -16,10 +16,12 @@
       "nmon",
       "p7zip-full",
       "procps",
+      "qemu-system",
       "qutebrowser",  # keyboard-focused browser
       "snapd",
       "sudo",
       "tzdata",
+      "uidmap",
       "unzip",
       "vulkan-tools",
       "wget",
