Update scripts for work_computer setup and remove ng from zshrc.

--- a/.chezmoidata/packages.toml
+++ b/.chezmoidata/packages.toml
@@ -79,6 +79,7 @@
       "bash-completion",
       "bat",             # cat with syntax highlighting and Git integration
       "bottom",          # Process/system monitor for the terminal.
+      "chezmoi", 	 # Install via homebrew to replace /bin/ executable.
       "coreutils",
       "exercism",
       "eza",             # ls replacement
