--- a/dot_config/catppuccin/oh-my-posh/catppuccin_macchiato.omp.yaml
+++ b/dot_config/catppuccin/oh-my-posh/catppuccin_macchiato.omp.yaml
@@ -16,8 +16,7 @@ blocks:
 - type: prompt
   alignment: left
   segments:
-  - properties:
-      cache_duration: none
+  - options:
       debian: 
       macos: 
     background: p:blue
@@ -27,16 +26,13 @@ blocks:
     style: diamond
     template: "{{.Icon}} "
     type: os
-  - properties:
-      cache_duration: none
-    background: p:blue
+  - background: p:blue
     foreground: p:text
     powerline_symbol: 
     style: diamond
     template: " {{ .UserName }}@{{ .HostName }} "
     type: session
-  - properties:
-      cache_duration: none
+  - options:
       folder_icon: ....
       home_icon: "~"
       style: agnoster_short
@@ -46,9 +42,10 @@ blocks:
     style: powerline
     template: " {{ .Path }}"
     type: path
-  - properties:
+  - background: p:lavender
+    foreground: p:text
+    options:
       branch_icon:  
-      cache_duration: none
       cherry_pick_icon:  
       commit_icon:  
       fetch_status: false
@@ -58,8 +55,6 @@ blocks:
       rebase_icon:  
       revert_icon:  
       tag_icon:  
-    background: p:lavender
-    foreground: p:text
     powerline_symbol: 
     style: powerline
     template: " {{ .HEAD }}"
@@ -68,65 +63,62 @@ blocks:
   alignment: right
   overflow: hide
   segments:
-  - properties:
-      cache_duration: none
-      command: git log --pretty=format:%cr -1 || date +%H:%M:%S
-      shell: zsh
+  - options:
+      time_format: 15:04:05
     background: p:sky
     foreground: p:text
     leading_diamond: 
-    type: command
+    type: time
     style: diamond
-  - properties:
+  - options:
       cache_duration: none
     background: p:mauve
     foreground: p:text
     style: plain
     template: "  {{ .Full }} "
     type: elixir
-  - properties:
+  - options:
       cache_duration: none
     background: p:sapphire
     foreground: p:text
     style: plain
     template: "  {{ .Full }} "
     type: go
-  - properties:
+  - options:
       cache_duration: none
     background: p:blue
     foreground: p:text
     style: plain
     template: " 󰢱 {{ .Full }} "
     type: lua
-  - properties:
+  - options:
       cache_duration: none
     background: p:green
     foreground: p:text
     style: plain
     template: "  {{ .Full }} "
     type: node
-  - properties:
-      cache_duration: none
-    background: p:yellow
+  - background: p:yellow
     foreground: p:text
+    options:
+      cache_duration: none
     style: plain
     template: "   {{ .Full }} "
     type: python
-  - properties:
-      cache_duration: none
-    background: p:red
+  - background: p:red
     foreground: p:text
+    options:
+      cache_duration: none
     style: plain
     template: "   {{ .Full}} "
     type: ruby
-  - properties:
-      cache_duration: none
-      http_timeout: 1000
+  - background: p:lavender
     cache:
       duration: 5m0s
       strategy: folder
-    background: p:lavender
     foreground: p:text
+    options:
+      http_timeout: 1000
     powerline_symbol: 
     style: diamond
     template: " {{ .IP }}"
